// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly when getting an entity 1`] = `
<Container
  htmlFor="The Label"
  label="The Label"
  touched={false}
>
  <FieldBorder
    className="src-modules-event-components-entity-selector__border"
  >
    <Message
      showIcon={false}
      type="field"
    >
      <React.Fragment>
         
        <Loader
          size="medium"
          type="default"
        />
      </React.Fragment>
    </Message>
    <Component />
    <withState(EntitySelectorSearch)
      entityType="talent"
      onAutocompleteSearch={[Function]}
      onAutocompleteSelect={[Function]}
    />
  </FieldBorder>
</Container>
`;

exports[`should render correctly when has an entity 1`] = `
<Container
  htmlFor="The Label"
  label="The Label"
  touched={false}
>
  <FieldBorder
    className="src-modules-event-components-entity-selector__border"
  >
    <Message
      showIcon={false}
      type="field"
    >
      <a
        href="/talent/some-id"
        rel="noopener"
        target="_blank"
      >
        Some Name
      </a>
    </Message>
    <Component />
    <withState(EntitySelectorSearch)
      entityType="talent"
      onAutocompleteSearch={[Function]}
      onAutocompleteSelect={[Function]}
    />
  </FieldBorder>
</Container>
`;

exports[`should render correctly when has no entity 1`] = `
<Container
  htmlFor="The Label"
  label="The Label"
  touched={false}
>
  <FieldBorder
    className="src-modules-event-components-entity-selector__border"
  >
    <Message
      showIcon={false}
      title="None Selected"
      type="field"
    >
      Search for one below.
    </Message>
    <Component />
    <withState(EntitySelectorSearch)
      entityType="talent"
      onAutocompleteSearch={[Function]}
      onAutocompleteSelect={[Function]}
    />
  </FieldBorder>
</Container>
`;
